--- a/site/src/styles/_footer.scss
+++ b/site/src/styles/_footer.scss
@@ -78,6 +78,6 @@
   }
 
   &__bot {
-    color: $slate-500;
+    color: var(--dz-muted);
   }
 }
